@@ -666,6 +666,7 @@ Spring 4.3 also improves the caching abstraction as follows:
 * `@ResponseStatus` supported on the class level and inherited on all methods.
 * New `@SessionAttribute` annotation for access to session attributes (see <<mvc-ann-sessionattrib-global, example>>).
 * New `@RequestAttribute` annotation for access to session attributes (see <<mvc-ann-requestattrib, example>>).
+* `@ModelAttribute` allows preventing data binding via `binding=false` attribute (see <<mvc-ann-modelattrib-method-args, reference>>).
 * `AsyncRestTemplate` supports request interception.
 
 === WebSocket Messaging Improvements
